plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.0-M1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.rag'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    
    // Reactive Support
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    
    // OpenAPI and Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
    
    // PDF Processing
    implementation 'org.apache.pdfbox:pdfbox:3.0.1'
    
    // OCR
    implementation 'net.sourceforge.tess4j:tess4j:5.9.0'
    
    // Qdrant Client
    implementation 'io.qdrant:client:1.7.0'
    implementation 'com.google.guava:guava:33.0.0-jre'
    implementation 'com.google.protobuf:protobuf-java:3.25.1'
    
    // Redis Client
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.apache.commons:commons-pool2:2.12.0'
    
    // JSON Processing
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
    
    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'net.jqwik:jqwik:1.8.2'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
